[package]
name = "registry"
version = "0.1.0"
description = "A proc macro lib for binding futures to events emitted by the mayuri lib."
edition = "2024"
repository = "https://github.com/mooncell07/mayuri"
keywords = ["proc-macro", "macro", "codegen", "registry"]
categories = ["development-tools::procedural-macro", "codegen"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
linkme = "0.3"
proc-macro-crate = "3"
